fdo#70578: writerfilter RTF import: by default style is para style 0

quoth the spec:

"For <style>, both <styledef> and <stylename> are optional; the default
is paragraph style 0."

Of course in order to do that we need to add support for at least
recognizing the \dsN and \tsN keywords to override the default, so that
table styles don't become paragraph styles.

Change-Id: Ic100768581f9e8c327063ff776fbd61ac4242483
(cherry picked from commit 6c0e1270889deb513f961f864dfc1c02ee8705f4)